--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/eventpoints/eventpoint.app-caddy
+            ghcr.io/eventpoints/kontractpoint.com-caddy
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=branch
