update docker-compose prod to include assetmap and tailwind build

--- a/.deployment/docker-compose.production-template.yml
+++ b/.deployment/docker-compose.production-template.yml
@@ -65,6 +65,24 @@ services:
       - traefik
       - internal
 
+  asset-mapper-compile:
+    image: ghcr.io/eventpoints/php:main
+    platform: linux/amd64
+    volumes:
+      - .:/app:cached
+    working_dir: /app
+    entrypoint: [ "" ]
+    command: "bash -c 'bin/console asset-map:compile'"
+
+  tailwind-build:
+    image: ghcr.io/eventpoints/php:main
+    platform: linux/amd64
+    volumes:
+      - .:/app:cached
+    working_dir: /app
+    entrypoint: [ "" ]
+    command: "bash -c 'bin/console tailwind:build --minify'"
+
   database:
     image: postgres:13
     restart: unless-stopped
